# fakechat

./: build.sh  fakechat.sln  log.txt  readme.md
fakechat/: CMakeLists.txt  fakechat.cpp  fakechat.vcxproj  fakechat.vcxproj.filters
fakechat-qt/: fakechat-qt.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
libchat/: CMakeLists.txt  configloader.h  des.cpp  libchat.cpp  libchat.h  libchat.vcxproj  libchat.vcxproj.filters  md5.cpp
libhole/: CMakeLists.txt  libhole.cpp  libhole.h  libhole.vcxproj  libhole.vcxproj.filters  stun.cpp  stun.h  udp.cpp  udp.h
test/: CMakeLists.txt  test.cpp  test.vcxproj
tools/genxml/: code.h  code_h.tpl  fakechat.xml  run.bat  sample.xml
