CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FAKECHAT)
AUX_SOURCE_DIRECTORY(./ FAKECHAT_SRC_LIST)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../libhole/)
INCLUDE_DIRECTORIES(../libchat/)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${FAKECHAT_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${FAKECHAT_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${FAKECHAT_SRC_LIST})
LINK_DIRECTORIES(${FAKECHAT_SOURCE_DIR}/../bin/)
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release fakechat")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug fakechat")
ENDIF()
SET(EXECUTABLE_OUTPUT_PATH ${FAKECHAT_BINARY_DIR}/../bin)
ADD_EXECUTABLE(fakechat ${FAKECHAT_SRC_LIST})
TARGET_LINK_LIBRARIES(fakechat chat hole)
