CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LIBCHAT)
AUX_SOURCE_DIRECTORY(./ LIBCHAT_SRC_LIST)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../libhole/)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${LIBCHAT_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${LIBCHAT_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${LIBCHAT_SRC_LIST})
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release libchat")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug libchat")
ENDIF()
SET(LIBRARY_OUTPUT_PATH ${LIBCHAT_BINARY_DIR}/../bin)
ADD_LIBRARY(chat STATIC ${LIBCHAT_SRC_LIST})

