CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LIBHOLE)
AUX_SOURCE_DIRECTORY(./ LIBHOLE_SRC_LIST)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${LIBHOLE_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${LIBHOLE_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${LIBHOLE_SRC_LIST})
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release lib")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug lib")
ENDIF()
SET(LIBRARY_OUTPUT_PATH ${LIBHOLE_BINARY_DIR}/../bin)
ADD_LIBRARY(hole STATIC ${LIBHOLE_SRC_LIST})
